--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
   </head>
   <body ng-app="directoryApp">
@@ -18,7 +19,7 @@
 
               -->
             <span class="input-group-addon" id="sizing-addon1"><span class="glyphicon glyphicon-search"></span></span>
-            <input type="text" class="form-control" placeholder="Search">
+            <input type="text" class="form-control" placeholder="Search" ng-model = "searchText">
           </div>
           <div class="tableWrapper">
             <table class="table table-striped table-hover">
@@ -26,6 +27,17 @@
                 <th>Code</th>
                 <th>Building Name</th>
                 <th></th>
+              </tr>
+              <tr ng-click = "showDetails($index)" ng-repeat = "entry in listings | filter: searchText"> 
+                <td>
+                  {{entry.code}}
+                </td>
+                <td>
+                  {{entry.name}}
+                </td>
+                <td>
+                  <button ng-click = "deleteListing($index)" class = "btn"><i class="fas fa-trash-alt"></i></button>
+                </td>
               </tr>
               <!-- 
 
@@ -36,6 +48,30 @@
                 --> 
             </table>
           </div>
+          <form name = "entryForm" ng-submit = "addListing()">
+            <h2>Add new listing</h2>
+            <div class = "form-group">
+              <label for = "inputCode">Code</label>
+              <input ng-model = "newEntry.code " type = "text" id ="inputCode" class = "form-control">
+            </div>
+            <div class = "form-group">
+              <label for = "buildingName">Building</label>
+              <input ng-model = "newEntry.name" type = "text" id ="buildingName" class = "form-control">
+            </div>
+            <div class = "form-group">
+              <label for = "longitudeValue">Longitude</label>
+              <input ng-model = "newEntry.coordinates.latitude" type = "text" id ="longitudeValue" class = "form-control">
+            </div>
+            <div class = "form-group">
+              <label for = "latitudeValue">Latitude</label>
+              <input ng-model = "newEntry.coordinates.longitude" type = "text" id ="latitudeValue" class = "form-control">
+            </div>
+            <div class = "form-group">
+              <label for = "AddressValue">Address</label>
+              <input ng-model = "newEntry.address" type = "text" id ="AddressValue" class = "form-control">
+            </div>
+            <input class = "btn btn-primary" value = "Submit" ng-click = "addListing()">
+          </form>
           <!-- 
 
               Write an HTML form that adds new listings to the directory 
@@ -45,6 +81,11 @@
         <div class="col-md-6">
           <div class="jumbotron">
             <h2>Detailed Information</h2>
+            <p><strong>Code: </strong>{{selectedEntry.code}}</p>
+            <p><strong>Building Name: </strong>{{selectedEntry.name}}</p>
+            <p><strong>Longitude: </strong>{{selectedEntry.coordinates.longitude}}</p>
+            <p><strong>Latitude: </strong>{{selectedEntry.coordinates.latitude}}</p>
+            <p><strong>Address: </strong>{{selectedEntry.address}}</p>
             <!-- 
 
               Include a way to display detailed information about an individual listing:
