Fixed filtering bug that happened when a user made a search and the jumbotron was showing the wrong details

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <th>Building Name</th>
                 <th></th>
               </tr>
-              <tr ng-click = "showDetails($index)" ng-repeat = "entry in listings | filter: searchText"> 
+              <tr ng-click = "showDetails(entry)" ng-repeat = "entry in listings | filter: searchText"> 
                 <td>
                   {{entry.code}}
                 </td>
@@ -48,7 +48,7 @@
                 --> 
             </table>
           </div>
-          <form name   = "entryForm" ng-submit = "addListing()">
+          <form name = "entryForm" ng-submit = "addListing()">
             <h2>Add new listing</h2>
             <div class = "form-group">
               <label for = "inputCode">Code</label>
